Fixed mana borders being too big

--- a/content/panorama/styles/custom_game/heroInfoCard.scss
+++ b/content/panorama/styles/custom_game/heroInfoCard.scss
@@ -12,7 +12,7 @@
 }
 
 .hero-info-card__left{
-    width: 102px;
+    width: 100px;
     
     flow-children: down;
 }
@@ -54,7 +54,6 @@
     width: 100%;
     background-color:rgba(36, 42, 53, 0.2);
     border-radius: 5px;
-    border: 1px solid rgb(0, 0, 0);
 }
 
 .hero-info-card-resources__mana{
