--- a/content/panorama/styles/custom_game/heroOverhead/heroOverhead.scss
+++ b/content/panorama/styles/custom_game/heroOverhead/heroOverhead.scss
@@ -30,10 +30,10 @@
 
     &__health{
         width: 100%;
-        height: 12px;
+        height: 13px;
 
         margin-bottom: 1px;
-        background-color: rgba($color: #000000, $alpha: 0.35);
+        background-color: rgba($color: #000000, $alpha: 0.2);
         border-radius: 3px;
     }
     
@@ -43,7 +43,7 @@
 
         flow-children: right;
         
-        margin-bottom: 2px;
+        margin-bottom: 1px;
     }
 
     &__castpoint{
